feat(sheet): rename normal problem endpoints to FAQ and update related structures
